--- a/lesson_1/index.html
+++ b/lesson_1/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Pham Nhu Hoang</h1>
-    <script src="./main.js"></script>
+    <script src="./dataType.js"></script>
 </body>
 </html>
